hphp/test/slow/class_type_constant/type_constant3.php.expectf
Fatal error: syntax error, unexpected T_CONSTANT_ENCAPSED_STRING in %stest/slow/class_type_constant/type_constant3.php on line 5
